--- a/RegistraPessoa.Dados.Entity/RegistraPessoa.Dados.Entity.csproj
+++ b/RegistraPessoa.Dados.Entity/RegistraPessoa.Dados.Entity.csproj
@@ -66,7 +66,7 @@
       <Project>{db193371-92be-4973-b81e-d7d477d001ac}</Project>
       <Name>RegistraPessoa.Dominio</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Locadora.Filmes.Generica.Entity\RegistraPessoa.Generica.Entity.csproj">
+    <ProjectReference Include="..\RegistraPessoa.Generica.Entity\RegistraPessoa.Generica.Entity.csproj">
       <Project>{dd1bd583-7c70-48dd-a358-bf7e1eff0d79}</Project>
       <Name>RegistraPessoa.Generica.Entity</Name>
     </ProjectReference>
