--- a/RegistraPessoa.Web/RegistraPessoa.Web.csproj
+++ b/RegistraPessoa.Web/RegistraPessoa.Web.csproj
@@ -13,8 +13,8 @@
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Locadora.Filmes.Web</RootNamespace>
-    <AssemblyName>Locadora.Filmes.Web</AssemblyName>
+    <RootNamespace>RegistraPessoa.Web</RootNamespace>
+    <AssemblyName>RegistraPessoa.Web</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
     <UseIISExpress>true</UseIISExpress>
@@ -154,9 +154,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_Start\AutoMapperConfig.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="AutoMapper\DominioParaViewModelProfile.cs" />
+    <Compile Include="AutoMapper\ViewModelParaDominioProfile.cs" />
     <Compile Include="Controllers\CategoriasController.cs" />
     <Compile Include="Controllers\PessoasController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -165,10 +168,10 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
-    <Compile Include="ViewModels\Categoria\AlbumIndexViewModel.cs" />
-    <Compile Include="ViewModels\Categoria\AlbumViewModel.cs" />
-    <Compile Include="ViewModels\Pessoa\FilmeIndexViewModel.cs" />
-    <Compile Include="ViewModels\Pessoa\FilmeViewModel.cs" />
+    <Compile Include="ViewModels\Categoria\CategoriaIndexViewModel.cs" />
+    <Compile Include="ViewModels\Categoria\CategoriaViewModel.cs" />
+    <Compile Include="ViewModels\Pessoa\PessoaIndexViewModel.cs" />
+    <Compile Include="ViewModels\Pessoa\PessoaViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -221,6 +224,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Filtros\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
@@ -235,6 +239,12 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.3.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\RegistraPessoa.Dominio\RegistraPessoa.Dominio.csproj">
+      <Project>{db193371-92be-4973-b81e-d7d477d001ac}</Project>
+      <Name>RegistraPessoa.Dominio</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
