--- a/RegistraPessoa.Dominio/RegistraPessoa.Dominio.csproj
+++ b/RegistraPessoa.Dominio/RegistraPessoa.Dominio.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{DB193371-92BE-4973-B81E-D7D477D001AC}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Locadora.Filmes.Dominio</RootNamespace>
-    <AssemblyName>Locadora.Filmes.Dominio</AssemblyName>
+    <RootNamespace>RegistraPessoa.Dominio</RootNamespace>
+    <AssemblyName>RegistraPessoa.Dominio</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
