--- a/RegistraPessoa.Web/RegistraPessoa.Web.csproj
+++ b/RegistraPessoa.Web/RegistraPessoa.Web.csproj
@@ -163,6 +163,7 @@
     <Compile Include="Controllers\CategoriasController.cs" />
     <Compile Include="Controllers\PessoasController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Filtros\LogActionFilter.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -224,7 +225,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Filtros\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
@@ -241,9 +241,29 @@
     <Content Include="Scripts\jquery-3.3.1.min.map" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\RegistraPessoa.Comum.Entity\RegistraPessoa.Comum.Entity.csproj">
+      <Project>{655609ed-5b84-4bb8-b4db-ec9a6a9d6931}</Project>
+      <Name>RegistraPessoa.Comum.Entity</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\RegistraPessoa.Dados.Entity\RegistraPessoa.Dados.Entity.csproj">
+      <Project>{b9b8fbe7-7849-4106-a1d8-5593dcf568ae}</Project>
+      <Name>RegistraPessoa.Dados.Entity</Name>
+    </ProjectReference>
     <ProjectReference Include="..\RegistraPessoa.Dominio\RegistraPessoa.Dominio.csproj">
       <Project>{db193371-92be-4973-b81e-d7d477d001ac}</Project>
       <Name>RegistraPessoa.Dominio</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\RegistraPessoa.Generica.Entity\RegistraPessoa.Generica.Entity.csproj">
+      <Project>{dd1bd583-7c70-48dd-a358-bf7e1eff0d79}</Project>
+      <Name>RegistraPessoa.Generica.Entity</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\RegistraPessoa.Repositorios.Comum\RegistraPessoa.Repositorios.Comum.csproj">
+      <Project>{4a950f38-a622-447d-80b5-6b3c167fc408}</Project>
+      <Name>RegistraPessoa.Repositorios.Comum</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\RegistraPessoa.Repositorios.Entity\RegistraPessoa.Repositorios.Entity.csproj">
+      <Project>{5de34e4d-ca51-4b2d-ad1a-31ca8313f093}</Project>
+      <Name>RegistraPessoa.Repositorios.Entity</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
