--- a/RegistraPessoa.Web/bin/Locadora.Filmes.Dados.Entity.dll.config
+++ b/RegistraPessoa.Web/bin/Locadora.Filmes.Dados.Entity.dll.config
@@ -7,8 +7,8 @@
           requirePermission="false"/>
     </configSections>
   <connectionStrings>
-    <!-- String de conexão. Mesmo nome da Db Context | Driver do banco de dados -->
-    <add name="FilmeDbContext" providerName="System.Data.SqlClient" connectionString="Server=.\SQLEXPRESS;Database=Filmes;Trusted_Connection=True;"/>
+    <add name="PessoaContext" providerName="System.Data.SqlClient" connectionString="Server=DESKTOP-0G0J6C2\MSSQLSERVER01;Database=RegistraPessoa;Trusted_Connection=True" />
+    <!--Configuração do Banco de Dados -->
   </connectionStrings>
   <entityFramework>
     <providers>
